<resources>
    <string name="app_name">AppOD</string>
    <string name="description_image">Video Streaming</string>
    <string name="detections_block">Bloque de detecciones</string>
    <string name="main_scrollable">Main Scroll Layout</string>
    <string name="init_state">SIN CONEXIÓN</string>
    <string name="activity_title">ACTIVIDAD:</string>
    <string name="initial_date">Fecha detección:</string>
    <string name="nav_prev">Anterior</string>
    <string name="nav_next">Siguiente</string>
    <string name="nav_settings">Configuración</string>
    <string name="nav_notifications">Notificaciones</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_login">Inicio de Sesión</string>
    <string name="subtitle_login">Se requiere la validación de las credenciales correspondientes para el acceso al sistema</string>
    <string name="user_login">Usuario</string>
    <string name="password_login">Contraseña</string>
    <string name="forgot_login">Recuperar contraseña</string>
    <string name="login_login">Iniciar sesión</string>
    <string name="server_login">Servidor</string>
    <string name="mail_login">Correo Electrónico</string>
    <string name="title_alarm">¡Intruso Detectado!</string>
    <string name="description_icon_alarm">Icono para la vista de alarma</string>
    <string name="button_alarm">CERRAR</string>
</resources>